# cremniy

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  README_ru.md  ROADMAP.md  ROADMAP_ru.md  cremniy.desktop
src/: CMakeLists.txt  main.cpp
src/BuildSystem/: BuildConfig.cpp  BuildConfig.h  BuildManager.cpp  BuildSetupDialog.cpp  BuildSetupDialog.h
src/Modules/References/AsciiChars/: asciicharsref.cpp
src/Modules/References/KeyboardScancodes/: keyboardscancodesref.cpp
src/Modules/Tabs/Binary/: binarytab.cpp  binarytab.h
src/Modules/Tabs/CodeEditor/: codeeditortab.cpp  codeeditortab.h
src/Modules/Tabs/Disassembler/: disassemblertab.cpp
src/Modules/Windows/DataConverter/: dataconverterdialog.cpp
src/Modules/Windows/ReverseCalculator/: reversecalculatordialog.cpp
src/Modules/Windows/ShellCodeGenerator/: shellcodegeneratordialog.cpp  shellcodegeneratordialog.h  shellcodetypes.h
src/Modules/Windows/ShellCodeGenerator/AsmHighlighter/: AsmHighlighter.cpp  AsmHighlighter.h
src/ToolTabs/Binary/: binarytab.cpp  formatpage.h
src/ToolTabs/Binary/FormatPages/RAW/: rawpage.cpp  rawpage.h
src/ToolTabs/Binary/QHexView/: CMakeLists.txt
src/ToolTabs/Binary/QHexView/src/: qhexview.cpp
src/ToolTabs/CodeEditor/: codeeditortab.cpp  codeeditortab.h
src/ToolTabs/Disassembler/: disassemblertab.cpp  disassemblertab.h  disassemblerworker.cpp  disassemblerworker.h
src/ToolTabs/always/Binary/QHexView/: CMakeLists.txt
src/ToolTabs/always/CodeEditor/: codeeditortab.cpp  codeeditortab.h
src/Tools/References/AsciiChars/: asciicharsref.cpp
src/Tools/Tabs/CodeEditor/: codeeditortab.cpp
src/Tools/Tabs/Disassembler/: disassemblertab.cpp  disassemblertab.h
src/Tools/Windows/DataConverter/: dataconverterdialog.cpp
src/Tools/Windows/ShellCodeGenerator/: shellcodegeneratordialog.cpp
src/app/IDEWindow/: idewindow.cpp  idewindow.h
src/app/WelcomeWindow/: welcomeform.cpp
src/components/codeeditor/: CMakeLists.txt
src/components/hexview/: CMakeLists.txt
src/core/: FileDataBuffer.cpp  FileDataBuffer.h
src/core/file/: filemanager.cpp
src/core/modules/: ModuleManager.cpp  ModuleManager.h  TabBase.h
src/dialogs/: dataconverterdialog.cpp  dataconverterdialog.h  projectsearchdialog.cpp  projectsearchdialog.h  projectsearchresultdelegate.cpp  reversecalculatordialog.cpp  reversecalculatordialog.h  settingsdialog.cpp  settingsdialog.h  shellcodegeneratordialog.cpp
src/libs/CodeEditor/: CMakeLists.txt
src/libs/CodeEditor/include/widgets/: CustomCodeEditor.h
src/libs/CodeEditor/src/widgets/: CustomCodeEditor.cpp
src/libs/cremniy-codeeditor/include/widgets/: CustomCodeEditor.h
src/resources/styles/: lunadark.qss  nord.qss  style.qss
src/resources/styles/custom/: darcula.qss
src/ui/: filestabwidget.cpp  filestabwidget.h  toolstabwidget.cpp  toolstabwidget.h
src/ui/FilesTabWidget/: filestabwidget.cpp  filestabwidget.h
src/ui/MenuBar/Menus/Edit/: editmenu.cpp  editmenu.h
src/ui/ToolsTabWidget/: ToolTabFactory.cpp  ToolTabFactory.h  toolstabwidget.cpp  toolstabwidget.h
src/utils/: filecontext.cpp
src/utils/projectsearch/: projectsearchworker.cpp
src/widgets/: disassemblertab.cpp  disassemblertab.h  disassemblerworker.cpp  disassemblerworker.h  filetab.cpp  filetab.h  filetreeview.cpp  hexviewtab.h  tooltabwidget.cpp  verticaltabstyle.cpp
src/widgets/terminal/: terminalwidget.cpp  terminalwidget.h
(+14 files in other folders)
